# xorwow

./: Cargo.toml  README.md
benches/: seed_and_run.rs  seed_and_run_128.rs  seed_and_run_64.rs
src/: lib.rs  xorwow128.rs  xorwow64.rs
