[package]
name = "xorwowgen"
version = "0.3.0"
edition = "2021"
authors = ["El Kasztano"]
description = "Several implementations of the Xorwow algorithm"
repository = "https://github.com/elkasztano/xorwow"
license = "MIT"
keywords = ["xorwow", "pseudorandom", "PRNG", "generator"]
categories = ["algorithms", "mathematics"]

[features]
serde1 = ["serde"]

[dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1", features = ["derive"], optional=true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "seed_and_run"
harness = false

[[bench]]
name = "seed_and_run_64"
harness = false
